--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="textEditor">
         <div id="theRibbon">
             <button id="boldButton" title="Bold"><b>B</b></button>
+            <button id="underlineButton" title="Underline"><u>U</u></button>
             <button id="italicButton" title="Italic"><em>I</em></button>
             <button id="supButton" title="Superscript">X<sup>2</sup></button>
             <button id="subButton" title="Subscript">X<sub>2</sub></button>
